Add MQTT GPS publishing and settings WebView