@@ -1,687 +1,333 @@
-# SimpleButtonApp - Complete Codebase & Configuration Overview
+# SimpleButtonApp Codebase Overview
 
-**Project**: SimpleButtonApp (Android Button Counter)  
-**Date**: May 11, 2026  
-**Status**: Production Ready  
-**Language**: Kotlin  
-**Build System**: Gradle 8.5  
+## What This App Is
 
----
+SimpleButtonApp is a Kotlin Android app for displaying real-time device sensor readings and GPS location data. It uses a single activity with bottom navigation and multiple fragments.
 
-## 📋 Table of Contents
+This overview reflects the current source code in the repository.
 
-1. [Project Overview](#project-overview)
-2. [Agent Configuration](#agent-configuration)
-3. [Skill Configuration](#skill-configuration)
-4. [Codebase Architecture](#codebase-architecture)
-5. [Build Configuration](#build-configuration)
-6. [Dependencies](#dependencies)
-7. [Key Features](#key-features)
-8. [Running the Application](#running-the-application)
+## High-Level Structure
 
----
-
-## Project Overview
-
-### Purpose
-SimpleButtonApp is a minimal Android demonstration application built with modern tooling and best practices. It showcases:
-- Kotlin language usage
-- AndroidX library integration
-- Gradle build configuration
-- Resource management and localization
-- Release build optimization (ProGuard)
-
-### Target Platforms
-- **Compile SDK**: Android 13 (API Level 33)
-- **Target SDK**: Android 13 (API Level 33)
-- **Min SDK**: Android 8.0 (API Level 26)
-- **Supported Devices**: ~95% of Google Play ecosystem
-
-### Application Type
-- **Type**: Single-screen Android app
-- **Architecture**: Activity-based (minimal pattern)
-- **Complexity**: Educational/reference project
-
----
-
-## Agent Configuration
-
-### AGENT.md Overview
-
-The project uses an **Android Kotlin Developer Agent** configured to handle:
-
-#### Capabilities
-1. **Build Configuration & Optimization**
-   - Gradle plugin management
-   - Android SDK version handling
-   - ProGuard/R8 obfuscation
-   - Performance optimization
-
-2. **Kotlin Android Development**
-   - Modern Kotlin practices
-   - Coroutines and async patterns
-   - Lifecycle management
-   - State handling
-
-3. **AndroidX Library Management**
-   - Version compatibility
-   - Deprecated Support Library migration
-   - Library resolution conflicts
-   - API level alignment
-
-4. **Version Compatibility Resolution**
-   - Java ↔ Kotlin alignment
-   - Gradle Plugin ↔ Android SDK matching
-   - Library minimum API requirements
-   - JVM configuration
-
-5. **Build Failure Diagnosis**
-   - Error pattern recognition
-   - Root cause mapping
-   - Targeted fixes
-   - Validation workflows
-
-6. **Deployment & Testing**
-   - APK generation (debug/release)
-   - Device installation
-   - Unit and instrumented testing
-   - Lint enforcement
-
-#### When to Use This Agent
-✅ **Use For:**
-- Build configuration issues
-- Kotlin feature implementation
-- Gradle troubleshooting
-- Dependency conflicts
-- AndroidX upgrades
-- Testing setup
-- Performance optimization
-
-❌ **Don't Use For:**
-- iOS development
-- Non-Android tasks
-- Non-build documentation
-
-#### Operating Principles
-1. **Diagnosis First** - Identify root cause before applying fixes
-2. **Version Alignment** - Ensure all components are compatible
-3. **Latest Compatible Versions** - Use stable, tested versions
-4. **Validate Before Building** - Check syntax and references
-5. **Optimize for Production** - Enable ProGuard, lint, and minification
-
-#### Key Workflows Supported
-1. Resolve build failures
-2. Configure new Android projects
-3. Resolve dependency conflicts
-4. Build for release
-5. Set up testing infrastructure
-
----
-
-## Skill Configuration
-
-### SKILL.md Overview
-
-Documents the **SimpleButtonApp - Android Kotlin Implementation Skill**, which provides:
-
-#### Technical Stack
-```
-Android Gradle Plugin: 8.1.0
-Kotlin Version: 1.9.0
-Gradle: 8.5
-Java Target: 17 (modern)
-Compile SDK: 33 (Android 13)
-```
-
-#### Project Structure Reference
-```
-SimpleButtonApp/
-├── build.gradle                    # Project-level configuration
-├── gradle.properties               # Gradle daemon settings
-├── settings.gradle                 # Project settings (include :app)
-├── app/
-│   ├── build.gradle               # App-level configuration
-│   ├── proguard-rules.pro         # Code obfuscation rules
-│   └── src/main/
-│       ├── AndroidManifest.xml    # App manifest
-│       ├── kotlin/
-│       │   └── com/example/simplebuttonapp/
-│       │       └── MainActivity.kt # Main activity (click counter)
-│       └── res/
-│           ├── layout/
-│           │   └── activity_main.xml
-│           └── values/
-│               ├── colors.xml
-│               └── strings.xml
-```
-
-#### Critical Issues & Solutions
-
-**Issue #1: Java 17 Compatibility (Deprecated JVM Args)**
-- **Problem**: `-XX:MaxPermSize` not supported in Java 17
-- **Error**: "Unrecognized VM option 'MaxPermSize=512m'"
-- **Solution**: Removed MaxPermSize from gradle.properties
-```gradle
-# ✅ CORRECT (Java 17)
-org.gradle.jvmargs=-Xmx2048m
-```
-
-**Issue #2: Gradle Plugin & SDK Mismatch**
-- **Problem**: Plugin 8.1.0 only tested up to SDK 33, not 34
-- **Impact**: Build warnings and potential failure
-- **Solution**: Set compileSdk to 33
-```gradle
-# ✅ CORRECT
-classpath "com.android.tools.build:gradle:8.1.0"
-compileSdk 33
-```
-
-**Issue #3: Java Version Requirements**
-- **Problem**: Java 17 requires SDK 30 or higher
-- **Impact**: "set compileSdkVersion to 30 or above" error
-- **Solution**: Used SDK 33
-
-**Issue #4: AndroidX Library Compatibility**
-- **Problem**: androidx.core:core-ktx:1.12.0+ requires SDK 34
-- **Impact**: Minimum SDK requirement conflict
-- **Solution**: Pinned compatible versions
-```gradle
-# ✅ CORRECT (SDK 33 compatible)
-implementation "androidx.core:core-ktx:1.10.1"
-implementation "androidx.appcompat:appcompat:1.6.0"
-```
-
-**Issue #5: Hard-Coded Strings (Localization)**
-- **Problem**: Text hard-coded in code and XML
-- **Impact**: Poor localization, maintenance issues
-- **Solution**: Moved all strings to strings.xml
-```kotlin
-# ✅ CORRECT
-statusText.text = getString(R.string.click_message, clickCount)
-```
-
----
-
-## Codebase Architecture
-
-### Application Structure
-
-#### 1. MainActivity.kt - Core Application Logic
-
-**Location**: `app/src/main/kotlin/com/example/simplebuttonapp/MainActivity.kt`
-
-**Responsibility**: Single Activity hosting button click counter
-
-**Key Components**:
-```kotlin
-class MainActivity : AppCompatActivity() {
-    
-    // State: Tracks button click count (persists during activity lifecycle)
-    private var clickCount = 0
-    
-    override fun onCreate(savedInstanceState: Bundle?) {
-        super.onCreate(savedInstanceState)
-        setContentView(R.layout.activity_main)
-        
-        // View references
-        val button = findViewById<Button>(R.id.myButton)
-        val statusText = findViewById<TextView>(R.id.statusText)
-        
-        // Event handler: Increment count and update UI
-        button.setOnClickListener {
-            clickCount++
-            statusText.text = getString(R.string.click_message, clickCount)
-        }
-    }
-}
-```
-
-**Architecture Pattern**: 
-- **Extends**: AppCompatActivity (provides backward compatibility)
-- **Lifecycle**: Follows Android lifecycle callbacks
-- **State Management**: Local variable (recreated on configuration change)
-- **View Binding**: findViewById (manual, suitable for simple layouts)
-- **String Resources**: Uses getString() for localization
-
-**Limitations & Notes**:
-- Click count resets on device rotation (not persisted)
-- Uses findViewById (not type-safe, could use View Binding)
-- No ViewModel pattern (acceptable for simple app)
-
-#### 2. activity_main.xml - UI Layout
-
-**Location**: `app/src/main/res/layout/activity_main.xml`
-
-**Layout Structure**:
-```xml
-<LinearLayout>              <!-- Vertical container, centered -->
-    <TextView>              <!-- Status message + click count -->
-    <Button>                <!-- Click target -->
-</LinearLayout>
-```
-
-**Design Details**:
-- **Container**: LinearLayout (simple, single column)
-- **Gravity**: center (content centered both axes)
-- **Padding**: 32dp (material design standard)
-- **Children**:
-  - TextView: Shows current status (responsive text size: 22sp)
-  - Button: Tap area (18sp text)
-
-#### 3. String Resources - Localization
-
-**Location**: `app/src/main/res/values/strings.xml`
-
-```xml
-<string name="app_name">SimpleButtonApp</string>
-<string name="initial_status">Press the button</string>
-<string name="button_label">Tap Me</string>
-<string name="click_message">Button pressed %1$d time(s)!</string>
-```
-
-**Localization Support**:
-- All user-visible strings externalized
-- Supports format strings (`%1$d` for integer count)
-- Easy to add language variants: `values-es/strings.xml`, `values-fr/strings.xml`
-
-#### 4. Color Resources
-
-**Location**: `app/src/main/res/values/colors.xml`
-
-**Material Design Palette**:
-```xml
-<color name="purple_200">#FFBB86FC</color>  <!-- Light purple -->
-<color name="purple_500">#FF6200EE</color>  <!-- Primary (Material) -->
-<color name="purple_700">#FF3700B3</color>  <!-- Dark purple -->
-<color name="teal_200">#FF03DAC5</color>    <!-- Light teal (accent) -->
-<color name="teal_700">#FF018786</color>    <!-- Dark teal -->
-<color name="button_primary">#FF6200EE</color>  <!-- Button background -->
-<color name="button_text">#FFFFFFFF</color>    <!-- Button text -->
-```
-
-#### 5. Android Manifest
-
-**Location**: `app/src/main/AndroidManifest.xml`
-
-```xml
-<manifest>
-    <application
-        android:allowBackup="true"           <!-- Backup/restore support -->
-        android:label="SimpleButtonApp"      <!-- App label in launcher -->
-        android:theme="@style/Theme.AppCompat.Light">
-        
-        <activity
-            android:name=".MainActivity"     <!-- Main entry point -->
-            android:exported="true">         <!-- Accessible to other apps (for launcher) -->
-            
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
-        </activity>
-    </application>
-</manifest>
-```
-
-**Key Settings**:
-- `allowBackup="true"` - Allows Android backup/restore
-- `exported="true"` - Required for launcher icon to appear
-- `MAIN` action - Designates as launch target
-- `LAUNCHER` category - Appears in app drawer
-
----
-
-## Build Configuration
-
-### Project-Level build.gradle
-
-**Location**: `build.gradle` (root)
-
-```gradle
-buildscript {
-    ext.kotlin_version = "1.9.0"
-    
-    repositories {
-        google()          # Android libraries
-        mavenCentral()    # General Java libraries
-    }
-    
-    dependencies {
-        classpath "com.android.tools.build:gradle:8.1.0"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.0"
-    }
-}
-
-allprojects {
-    repositories {
-        google()
-        mavenCentral()
-    }
-}
-```
-
-**Purpose**: 
-- Defines build tools and plugins used by all modules
-- Specifies dependency repositories
-- Sets global Kotlin version variable
-
-### App-Level build.gradle
-
-**Location**: `app/build.gradle`
-
-```gradle
-plugins {
-    id 'com.android.application'   # Android app plugin
-    id 'kotlin-android'             # Kotlin support
-}
-
-android {
-    namespace 'com.example.simplebuttonapp'
-    compileSdk 33
-    
-    defaultConfig {
-        applicationId "com.example.simplebuttonapp"
-        minSdk 26                    # Android 8.0 minimum
-        targetSdk 33                 # Android 13 optimization
-        versionCode 1
-        versionName "1.0"
-    }
-    
-    buildTypes {
-        release {
-            minifyEnabled true       # Enable ProGuard
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-    
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
-    }
-    
-    kotlinOptions {
-        jvmTarget = "17"
-    }
-    
-    lint {
-        checkReleaseBuilds true      # Lint on release builds
-        warningsAsErrors true        # Fail on lint warnings
-    }
-}
-
-dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.9.0"
-    implementation "androidx.appcompat:appcompat:1.6.0"
-    implementation "androidx.core:core-ktx:1.10.1"
-    
-    testImplementation "junit:junit:4.13.2"
-    androidTestImplementation "androidx.test.ext:junit:1.1.5"
-    androidTestImplementation "androidx.test.espresso:espresso-core:3.5.1"
-}
-```
-
-**Configuration Highlights**:
-
-| Setting | Value | Reason |
-|---------|-------|--------|
-| `compileSdk` | 33 | Android 13 APIs available during build |
-| `minSdk` | 26 | Support Android 8.0+ (~95% device coverage) |
-| `targetSdk` | 33 | Optimized for Android 13 behaviors |
-| `sourceCompatibility` | Java 17 | Use modern Java features |
-| `jvmTarget` | 17 | Kotlin targets Java 17 VM |
-| `minifyEnabled` | true (release) | Obfuscate/shrink code for production |
-| `warningsAsErrors` | true | Enforce code quality in builds |
-
-### Gradle Properties
-
-**Location**: `gradle.properties`
-
-```gradle
-org.gradle.jvmargs=-Xmx2048m          # JVM heap size (2GB)
-org.gradle.parallel=true               # Parallel compilation
-org.gradle.caching=true                # Cache task outputs
-
-android.useAndroidX=true               # Use AndroidX (not Support Library)
-android.enableJetifier=true            # Support Library → AndroidX conversion
-android.suppressUnsupportedCompileSdk=34  # SDK 34 warning suppression
-
-kotlin.code.style=official             # Official Kotlin code style
-```
-
-**Performance Impact**:
-- Parallel + Caching: ~70% faster builds vs. serial
-
-### ProGuard Configuration
-
-**Location**: `app/proguard-rules.pro`
-
-```proguard
-# Keep Android framework classes (required)
--keep class android.** { *; }
--keep interface android.** { *; }
-
-# Keep AndroidX libraries
--keep class androidx.** { *; }
--keep interface androidx.** { *; }
-
-# Keep app code (don't obfuscate)
--keep class com.example.simplebuttonapp.** { *; }
-
-# Strip debug logging in release
--assumenosideeffects class android.util.Log {
-    public static *** d(...);
-    public static *** v(...);
-    public static *** i(...);
-}
-
-# Keep native methods and enums
--keepclasseswithmembernames class * {
-    native <methods>;
-}
-
--keepclassmembers enum * {
-    public static **[] values();
-    public static ** valueOf(java.lang.String);
-}
-
-# Preserve Kotlin metadata
--keep class kotlin.** { *; }
--keep interface kotlin.** { *; }
-```
-
-**Purpose**:
-- Defines which code to obfuscate/keep for release builds
-- Reduces APK size by removing unused code
-- Removes debug logging
-- Preserves framework and library functionality
-
----
-
-## Dependencies
-
-### Compile-Time Dependencies
-
-```gradle
-# Kotlin Standard Library
-implementation "org.jetbrains.kotlin:kotlin-stdlib:1.9.0"
-
-# AndroidX - Backward Compatibility
-implementation "androidx.appcompat:appcompat:1.6.0"
-
-# AndroidX - Kotlin Extensions
-implementation "androidx.core:core-ktx:1.10.1"
-```
-
-**Dependency Graph**:
-```
+```text
 SimpleButtonApp
-├── kotlin-stdlib (language runtime)
-├── appcompat (backward compatible UI components)
-└── core-ktx (Kotlin extensions for Android APIs)
+|-- MainActivity
+|   `-- Hosts bottom navigation and swaps fragments
+|
+|-- DashboardFragment
+|   |-- Displays accelerometer values
+|   |-- Displays gyroscope values
+|   |-- Displays magnetometer values
+|   `-- Displays GPS status and location values
+|
+|-- DevicesFragment
+|   `-- MQTT GPS publisher UI
+|
+|-- MqttGpsPublisherManager
+|   `-- Long-running MQTT connection, GPS updates, and publishing state
+|
+|-- SettingsFragment
+|   `-- Interactive WebView for http://10.3.3.31:5000
+|
+`-- AboutFragment
+    `-- Placeholder TextView
 ```
 
-### Test Dependencies
+## Authored Files
 
-```gradle
-# JUnit 4 - Unit testing framework
-testImplementation "junit:junit:4.13.2"
-
-# AndroidX Test Runner - Instrumented tests
-androidTestImplementation "androidx.test.ext:junit:1.1.5"
-
-# Espresso - UI testing
-androidTestImplementation "androidx.test.espresso:espresso-core:3.5.1"
+```text
+build.gradle
+settings.gradle
+gradle.properties
+AGENT.md
+SKILL.md
+CONFIGURATION.md
+CODEBASE_OVERVIEW.md
+app/build.gradle
+app/proguard-rules.pro
+app/src/main/AndroidManifest.xml
+app/src/main/kotlin/com/example/simplebuttonapp/MainActivity.kt
+app/src/main/kotlin/com/example/simplebuttonapp/DashboardFragment.kt
+app/src/main/kotlin/com/example/simplebuttonapp/DevicesFragment.kt
+app/src/main/kotlin/com/example/simplebuttonapp/MqttGpsPublisherManager.kt
+app/src/main/kotlin/com/example/simplebuttonapp/SettingsFragment.kt
+app/src/main/kotlin/com/example/simplebuttonapp/AboutFragment.kt
+app/src/main/res/layout/activity_main.xml
+app/src/main/res/layout/fragment_dashboard.xml
+app/src/main/res/layout/fragment_devices.xml
+app/src/main/res/layout/fragment_settings.xml
+app/src/main/res/xml/network_security_config.xml
+app/src/main/res/menu/bottom_menu.xml
+app/src/main/res/values/colors.xml
+app/src/main/res/values/strings.xml
 ```
 
-### Version Compatibility Matrix
+Generated files live under `app/build/` and should not be used as source of truth.
 
-| Component | Version | Min API | Notes |
-|-----------|---------|---------|-------|
-| Gradle Plugin | 8.1.0 | - | Tested up to SDK 33 |
-| Kotlin | 1.9.0 | - | Modern language features |
-| appcompat | 1.6.0 | 14 | Backward compatible |
-| core-ktx | 1.10.1 | 14 | Kotlin extensions |
-| JUnit | 4.13.2 | - | Unit testing |
-| Espresso | 3.5.1 | 14 | UI automation |
+## MainActivity
 
----
+File: `app/src/main/kotlin/com/example/simplebuttonapp/MainActivity.kt`
 
-## Key Features
+`MainActivity` is the navigation host.
 
-### 1. Button Click Counting
-- **User Action**: Tap button on screen
-- **App Response**: Increments internal counter, updates displayed message
-- **String Template**: Uses `%1$d` format specifier
-- **Visual Feedback**: Real-time text update
+It does the following:
 
-### 2. Localization Support
-- All user strings in `strings.xml`
-- Supports multiple languages via resource qualifiers
-- Format strings for dynamic content
+- Calls `setContentView(R.layout.activity_main)`.
+- Finds `BottomNavigationView` by `R.id.bottom_navigation`.
+- Loads `DashboardFragment` when `savedInstanceState == null`.
+- Handles bottom navigation item selections.
+- Replaces the fragment container with:
+  - `DashboardFragment`
+  - `DevicesFragment`
+  - `SettingsFragment`
+  - `AboutFragment`
+- Adds each selected fragment transaction to the back stack.
 
-### 3. Production-Ready Optimization
-- **Code Obfuscation**: ProGuard rules configured
-- **Lint Enforcement**: Build fails on lint warnings
-- **Minification**: Enabled for release builds
-- **Resource Optimization**: ProGuard can remove unused resources
+## DashboardFragment
 
-### 4. Modern Android Stack
-- **Kotlin Language**: Type-safe, concise
-- **AndroidX Libraries**: Supported until 2026+
-- **Java 17**: Modern language features
-- **Material Design**: Color palette and styling
+File: `app/src/main/kotlin/com/example/simplebuttonapp/DashboardFragment.kt`
 
-### 5. Testing Infrastructure
-- **Unit Tests**: JUnit 4 framework
-- **UI Tests**: Espresso framework
-- **Test Runners**: AndroidX test runner
+`DashboardFragment` is the main functional fragment.
 
----
+It implements:
 
-## Running the Application
-
-### Prerequisites
-```
-✓ JDK 17 or later
-✓ Android SDK API 33
-✓ Gradle 8.5+
-✓ Android device or emulator
+```kotlin
+Fragment(), SensorEventListener
 ```
 
-### Build Debug APK
+### Sensors
+
+The fragment initializes:
+
+- `SensorManager`
+- default accelerometer
+- default gyroscope
+- default magnetometer
+
+It registers all available sensors in `onResume()` with:
+
+```kotlin
+SensorManager.SENSOR_DELAY_UI
+```
+
+It unregisters the listener in `onPause()`.
+
+Sensor events update these TextViews:
+
+- `accelXText`, `accelYText`, `accelZText`
+- `gyroXText`, `gyroYText`, `gyroZText`
+- `magXText`, `magYText`, `magZText`
+
+Values are formatted with:
+
+```kotlin
+R.string.sensor_value_format
+```
+
+### GPS
+
+The fragment initializes:
+
+- `FusedLocationProviderClient`
+- `LocationCallback`
+
+It requests high-accuracy updates with:
+
+```kotlin
+LocationRequest.Builder(Priority.PRIORITY_HIGH_ACCURACY, 1000).build()
+```
+
+Location updates populate:
+
+- `latitudeText`
+- `longitudeText`
+- `accuracyText`
+- `altitudeText`
+- `gpsStatusText`
+
+Updates are removed in `onPause()`.
+
+### Permission Handling
+
+The fragment checks `ACCESS_FINE_LOCATION`. If missing, it requests both:
+
+- `ACCESS_FINE_LOCATION`
+- `ACCESS_COARSE_LOCATION`
+
+Current limitation:
+
+- There is no permission result callback in the current fragment code. A user granting permission may need a resume cycle before GPS starts.
+
+## DevicesFragment
+
+File: `app/src/main/kotlin/com/example/simplebuttonapp/DevicesFragment.kt`
+
+`DevicesFragment` provides the MQTT GPS publishing UI.
+
+It lets the user enter:
+
+- Broker IP or link
+- Port
+- Device name
+
+The fragment generates the MQTT topic as:
+
+```text
+devices/<device-name>/gps
+```
+
+For device name `xyz`, the topic becomes:
+
+```text
+devices/xyz/gps
+```
+
+The fragment delegates long-running work to `MqttGpsPublisherManager`.
+
+## MqttGpsPublisherManager
+
+File: `app/src/main/kotlin/com/example/simplebuttonapp/MqttGpsPublisherManager.kt`
+
+`MqttGpsPublisherManager` is a singleton that keeps MQTT, GPS, and publishing state outside fragment lifecycle. This prevents active publishing from stopping when the user switches tabs.
+
+It collects GPS through `FusedLocationProviderClient`, connects to the broker with Eclipse Paho, and continuously publishes GPS readings after Start Publish GPS is tapped. Publishing continues until Stop Publish or Disconnect is tapped. Each message is JSON:
+
+```json
+{"lat":19.076,"lng":72.8777,"speed":45,"accuracy":8,"heading":120,"altitude":14}
+```
+
+`heading` is populated from Android `Location.bearing`.
+
+## SettingsFragment
+
+File: `app/src/main/kotlin/com/example/simplebuttonapp/SettingsFragment.kt`
+
+`SettingsFragment` loads this local web app in a full-screen WebView:
+
+```text
+http://10.3.3.31:5000
+```
+
+The WebView enables JavaScript, DOM storage, wide viewport layout, and in-WebView navigation. The app includes `network_security_config.xml` so Android allows cleartext HTTP traffic to `10.3.3.31`.
+
+## Placeholder Fragments
+
+Files:
+
+- `AboutFragment.kt`
+
+Each fragment currently returns a `TextView` from `onCreateView(...)` with hard-coded placeholder text and padding.
+
+These are intentionally minimal and are candidates for future XML layouts and resource-backed strings.
+
+## Layouts
+
+### activity_main.xml
+
+Root layout:
+
+- Vertical `LinearLayout`
+- `FrameLayout` with ID `fragment_container`
+- `BottomNavigationView` with ID `bottom_navigation`
+
+The `FrameLayout` uses `layout_weight="1"` so it takes all space above the bottom nav.
+
+### fragment_dashboard.xml
+
+Scrollable vertical layout with sections:
+
+- Accelerometer
+- Gyroscope
+- Magnetometer
+- GPS Data
+
+The sensor sections use simple horizontal rows with labels on the left and values aligned to the right.
+
+### fragment_devices.xml
+
+Scrollable MQTT publisher layout with:
+
+- Broker input
+- Port input
+- Device-name input
+- Topic preview
+- Connect and Disconnect buttons
+- Start Publish GPS and Stop Publish buttons
+- Status, latest location, and payload text
+
+### fragment_settings.xml
+
+Full-screen WebView used by `SettingsFragment`.
+
+## Navigation Menu
+
+File: `app/src/main/res/menu/bottom_menu.xml`
+
+Navigation IDs:
+
+- `nav_dashboard`
+- `nav_devices`
+- `nav_settings`
+- `nav_about`
+
+The menu uses Android built-in drawable icons.
+
+## Resources
+
+### strings.xml
+
+Contains:
+
+- App name
+- Sensor section titles
+- Sensor axis labels
+- GPS status labels
+- GPS format strings
+- Navigation labels
+
+Known issue:
+
+- Some unit symbols are encoded incorrectly in the current XML. For example, `m/sÂ²` should likely be `m/s²`, and `Î¼T` should likely be `µT`.
+
+### colors.xml
+
+Contains Material-style colors plus status colors:
+
+- Blue for GPS and gyroscope
+- Green for accelerometer
+- Red for magnetometer
+
+## Build and Runtime Configuration
+
+| Item | Value |
+| --- | --- |
+| Kotlin | 1.9.0 |
+| Android Gradle Plugin | 8.1.0 |
+| compileSdk | 33 |
+| targetSdk | 33 |
+| minSdk | 26 |
+| Java target | 17 |
+| Kotlin JVM target | 17 |
+| Location library | Google Play Services Location 21.0.1 |
+| UI library | Material Components 1.9.0 |
+| Fragment library | AndroidX Fragment KTX 1.6.1 |
+| MQTT library | Eclipse Paho MQTT Client 1.2.5 |
+| Settings page | http://10.3.3.31:5000 |
+
+## Build Commands
+
 ```bash
-cd d:\code\andriod_tool\SimpleButtonApp
 gradle assembleDebug
-```
-
-**Output**: `app/build/outputs/apk/debug/app-debug.apk`
-
-### Build Release APK
-```bash
+gradle clean assembleDebug
 gradle assembleRelease
-```
-
-**Output**: `app/build/outputs/apk/release/app-release.apk`
-
-### Install and Run
-```bash
-# Install on connected device/emulator
-adb install app/build/outputs/apk/debug/app-debug.apk
-
-# Run on emulator
-emulator -avd <device_name> &
-adb install -r app/build/outputs/apk/debug/app-debug.apk
-```
-
-### Run Tests
-```bash
-# Unit tests
 gradle test
-
-# Instrumented tests (requires device/emulator)
 gradle connectedAndroidTest
 ```
 
-### Clean Build
-```bash
-gradle clean assembleDebug
-```
+## Recommended Next Improvements
 
----
-
-## Version Compatibility Reference
-
-### Gradle Plugin → Android SDK Support
-
-| Gradle Plugin | Max Tested SDK | Java Support |
-|---------------|----------------|--------------|
-| 8.0.x | 32 | 11-17 |
-| 8.1.x | 33 | 11-17 |
-| 8.2.x | 34 | 11-17+ |
-
-### Android SDK → Minimum Java Version
-
-| API Level | Min Java | Project Status |
-|-----------|----------|----------------|
-| 26-28 | Java 8 | Old devices |
-| 29-30 | Java 9 | Compatible |
-| 31-33 | Java 11+ | **Project (SDK 33, Java 17)** ✓ |
-| 34+ | Java 17+ | Future upgrade |
-
----
-
-## Configuration Checklist
-
-### ✅ Current Configuration Status
-
-- [x] Java 17 compatible (no deprecated JVM args)
-- [x] Gradle plugin matches SDK level (8.1.0 for SDK 33)
-- [x] AndroidX libraries used (not Support Library)
-- [x] All strings localized (strings.xml)
-- [x] ProGuard configured (release builds)
-- [x] Lint enabled with warnings-as-errors
-- [x] Testing dependencies included
-- [x] Project production-ready
-
-### Recommended Upgrades (Future)
-
-When upgrading Android SDK:
-- SDK 34+ → Gradle Plugin 8.2.0+
-- SDK 34+ → Java 17+ (already configured)
-- Core-ktx 1.12.0+ → Requires SDK 34
-
----
-
-## Summary
-
-**SimpleButtonApp** is a well-structured, production-ready Android reference project demonstrating:
-
-1. ✅ Modern build configuration (Gradle 8.1.0, Java 17, Kotlin 1.9.0)
-2. ✅ Best practice file organization
-3. ✅ Proper resource management and localization
-4. ✅ Production optimization (ProGuard, lint)
-5. ✅ Testing infrastructure (JUnit, Espresso)
-6. ✅ Complete documentation (AGENT.md, SKILL.md, CONFIGURATION.md)
-
-The codebase serves as an educational reference for Android development with modern tooling while maintaining simplicity for learning purposes.
-
+- Fix permission result handling in `DashboardFragment`.
+- Move About placeholder fragment text into `strings.xml`.
+- Add XML layouts for Devices, Settings, and About when those tabs gain real UI.
+- Correct encoding artifacts in `strings.xml`.
+- Consider avoiding `addToBackStack(null)` for bottom navigation tab switches if standard tab behavior is desired.
+- Add tests for navigation and permission behavior.
