@@ -1,1047 +1,212 @@
-# SimpleButtonApp - Android Kotlin Sensor & GPS Tracking with Bottom Navigation
+# SimpleButtonApp Skill
 
-## Overview
-A complete Android application demonstrating real-time sensor data collection and GPS tracking with modern Android development practices. Features a bottom navigation bar with four tabs, with the Dashboard tab displaying continuous streams of:
-- **Accelerometer** (X, Y, Z) - Motion/gravity detection
-- **Gyroscope** (X, Y, Z) - Rotation rate measurement
-- **Magnetometer** (X, Y, Z) - Magnetic field detection
-- **GPS Data** - Latitude, Longitude, Accuracy, Altitude (real-time updates every 1 second)
+## Purpose
 
-**Project**: SimpleButtonApp  
-**Language**: Kotlin  
-**Target API**: Android 13 (API Level 33)  
-**Min API**: Android 8.0 (API Level 26)  
-**Build System**: Gradle 8.5  
-**Java Target**: Java 17  
-**Architecture**: Fragment-based navigation with BottomNavigationView
+Use this skill when working on SimpleButtonApp, a Kotlin Android app that displays live device sensor data and GPS location through a fragment-based UI.
 
----
+The current codebase is a BottomNavigationView app with a Dashboard tab for sensors and GPS plus three placeholder tabs.
 
-## What This Skill Covers
+## Current Application
 
-### 1. **Android Project Structure**
-```
-SimpleButtonApp/
-├── build.gradle                 # Project-level build configuration
-├── gradle.properties            # Gradle daemon and Android settings
-├── settings.gradle              # Project settings
-├── app/
-│   ├── build.gradle             # App-level build configuration
-│   ├── proguard-rules.pro       # Code obfuscation rules
-│   └── src/
-│       └── main/
-│           ├── AndroidManifest.xml
-│           ├── kotlin/com/example/simplebuttonapp/
-│           │   ├── MainActivity.kt                    # Navigation orchestrator
-│           │   ├── DashboardFragment.kt              # Sensor & GPS display
-│           │   ├── DevicesFragment.kt                # Placeholder
-│           │   ├── SettingsFragment.kt               # Placeholder
-│           │   └── AboutFragment.kt                  # Placeholder
-│           └── res/
-│               ├── layout/
-│               │   ├── activity_main.xml             # Fragment container + BottomNav
-│               │   ├── fragment_dashboard.xml        # Sensor/GPS display
-│               │   ├── fragment_devices.xml
-│               │   ├── fragment_settings.xml
-│               │   └── fragment_about.xml
-│               ├── menu/
-│               │   └── bottom_menu.xml               # Navigation menu items
-│               └── values/
-│                   ├── colors.xml
-│                   └── strings.xml
+SimpleButtonApp contains:
+
+- One activity: `MainActivity`
+- Four fragments:
+  - `DashboardFragment`
+  - `DevicesFragment`
+  - `MqttGpsPublisherManager`
+  - `SettingsFragment`
+  - `AboutFragment`
+- One activity layout: `activity_main.xml`
+- One dashboard layout: `fragment_dashboard.xml`
+- One devices layout: `fragment_devices.xml`
+  - One settings layout: `fragment_settings.xml`
+- One bottom navigation menu: `bottom_menu.xml`
+
+## Architecture
+
+```text
+MainActivity
+|-- FrameLayout: R.id.fragment_container
+`-- BottomNavigationView: R.id.bottom_navigation
+    |-- Dashboard -> DashboardFragment
+    |-- Devices   -> DevicesFragment
+    |-- Settings  -> SettingsFragment
+    `-- About     -> AboutFragment
 ```
 
-### 2. **Build Configuration**
-- **Gradle Plugin**: Android Gradle Plugin 8.1.0
-- **Kotlin Support**: v1.9.0
-- **Compilation Target**: SDK 33 (Android 13)
-- **Java Compatibility**: Java 17 (modern features)
-- **Lint Checks**: Enabled for code quality
-- **Google Play Services**: Location API 21.0.1
-- **Material Design**: v1.9.0 (BottomNavigationView)
-- **Fragment Support**: androidx.fragment:fragment-ktx:1.6.1
+`MainActivity` owns navigation only. `DashboardFragment` owns sensor display behavior. `DevicesFragment` owns the MQTT UI. `MqttGpsPublisherManager` owns MQTT connection state, GPS updates, and continuous publishing so switching fragments does not interrupt active publishing. `SettingsFragment` owns the embedded WebView for `http://10.3.3.31:5000`.
 
-### 3. **Dependencies**
-```gradle
-androidx.appcompat:appcompat:1.6.0                        # Backward compatibility
-androidx.core:core-ktx:1.10.1                            # Kotlin extensions
-androidx.fragment:fragment-ktx:1.6.1                     # Fragment lifecycle support
-com.google.android.material:material:1.9.0              # Material Design (BottomNav)
-com.google.android.gms:play-services-location:21.0.1  # GPS/Location
-junit:junit:4.13.2                                      # Unit testing
-androidx.test.ext:junit:1.1.5                           # AndroidX test runner
-androidx.test.espresso:espresso-core:3.5.1             # UI testing
-```
+## Dashboard Behavior
 
-### 4. **Key Features Implemented**
+`DashboardFragment` displays:
 
-#### Architecture: Fragment-Based Navigation
-The app uses a bottom navigation bar with 4 tabs, each representing a different fragment:
-```
-┌──────────────────────────────────────┐
-│  FrameLayout (Fragment Container)    │
-│  - Dynamically shows DashboardFragment,
-│    DevicesFragment, SettingsFragment,
-│    or AboutFragment
-└──────────────────────────────────────┘
-┌────┬────┬────┬────────────────┐
-│ 📍 │ 📋 │ ⚙️ │ ℹ️  (Bottom Nav) │
-└────┴────┴────┴────────────────┘
-```
+- Accelerometer values: X, Y, Z
+- Gyroscope values: X, Y, Z
+- Magnetometer values: X, Y, Z
+- GPS values:
+  - Status
+  - Latitude
+  - Longitude
+  - Accuracy
+  - Altitude
 
-#### MainActivity.kt - Navigation Orchestrator
-**Responsibilities**:
-- Initialize BottomNavigationView
-- Handle fragment transactions
-- Load DashboardFragment on app startup
-- Switch between fragments when bottom nav items are tapped
+Sensor values update through `SensorEventListener.onSensorChanged(...)`.
 
-**Implementation**:
-```kotlin
-class MainActivity : AppCompatActivity() {
-    override fun onCreate(savedInstanceState: Bundle?) {
-        super.onCreate(savedInstanceState)
-        setContentView(R.layout.activity_main)
+GPS updates use:
 
-        val bottomNavigation = findViewById<BottomNavigationView>(R.id.bottom_navigation)
+- `FusedLocationProviderClient`
+- `LocationCallback`
+- `LocationRequest.Builder(Priority.PRIORITY_HIGH_ACCURACY, 1000)`
+- `Looper.getMainLooper()`
 
-        // Load Dashboard as default
-        if (savedInstanceState == null) {
-            supportFragmentManager.beginTransaction()
-                .replace(R.id.fragment_container, DashboardFragment())
-                .commit()
-        }
+The GPS interval is currently 1000 ms.
 
-        // Handle tab switches
-        bottomNavigation.setOnItemSelectedListener { item ->
-            val fragment = when (item.itemId) {
-                R.id.nav_dashboard -> DashboardFragment()
-                R.id.nav_devices -> DevicesFragment()
-                R.id.nav_settings -> SettingsFragment()
-                R.id.nav_about -> AboutFragment()
-                else -> DashboardFragment()
-            }
+## Lifecycle Rules
 
-            supportFragmentManager.beginTransaction()
-                .replace(R.id.fragment_container, fragment)
-                .addToBackStack(null)
-                .commit()
+Keep this lifecycle pattern intact:
 
-            true
-        }
-    }
-}
-```
+- Initialize views, sensors, and location callback in `onViewCreated(...)`.
+- Register sensors in `onResume()`.
+- Start location updates in `onResume()` only when fine location permission is granted.
+- Unregister sensors in `onPause()`.
+- Remove location updates in `onPause()`.
 
-#### DashboardFragment.kt - Sensor & GPS Data Display
-**Responsibilities**:
-- Implement SensorEventListener for accelerometer, gyroscope, magnetometer
-- Request and display GPS data via LocationCallback
-- Manage sensor/location lifecycle (onResume/onPause)
-- Handle runtime location permissions
+This prevents unnecessary battery use when the fragment is not active.
 
-**Sensor Implementation**:
-```kotlin
-class DashboardFragment : Fragment(), SensorEventListener {
-    private lateinit var sensorManager: SensorManager
-    private var accelerometerSensor: Sensor? = null
-    private var gyroscopeSensor: Sensor? = null
-    private var magnetometerSensor: Sensor? = null
+## Permissions
 
-    override fun onSensorChanged(event: SensorEvent?) {
-        when (event?.sensor?.type) {
-            Sensor.TYPE_ACCELEROMETER -> {
-                accelXText.text = getString(R.string.sensor_value_format, "X", event.values[0])
-                accelYText.text = getString(R.string.sensor_value_format, "Y", event.values[1])
-                accelZText.text = getString(R.string.sensor_value_format, "Z", event.values[2])
-            }
-            Sensor.TYPE_GYROSCOPE -> {
-                gyroXText.text = getString(R.string.sensor_value_format, "X", event.values[0])
-                gyroYText.text = getString(R.string.sensor_value_format, "Y", event.values[1])
-                gyroZText.text = getString(R.string.sensor_value_format, "Z", event.values[2])
-            }
-            Sensor.TYPE_MAGNETIC_FIELD -> {
-                magXText.text = getString(R.string.sensor_value_format, "X", event.values[0])
-                magYText.text = getString(R.string.sensor_value_format, "Y", event.values[1])
-                magZText.text = getString(R.string.sensor_value_format, "Z", event.values[2])
-            }
-        }
-    }
-}
-```
+The manifest declares:
 
-**GPS Implementation**:
-```kotlin
-private lateinit var locationCallback: LocationCallback
-
-locationCallback = object : LocationCallback() {
-    override fun onLocationResult(locationResult: LocationResult) {
-        val location = locationResult.lastLocation
-        if (location != null) {
-            latitudeText.text = getString(R.string.latitude_format, location.latitude)
-            longitudeText.text = getString(R.string.longitude_format, location.longitude)
-            accuracyText.text = getString(R.string.accuracy_format, location.accuracy)
-            altitudeText.text = getString(R.string.altitude_format, location.altitude)
-            gpsStatusText.text = getString(R.string.gps_found)
-        }
-    }
-}
-
-// GPS updates every 1 second
-val locationRequest = LocationRequest.Builder(Priority.PRIORITY_HIGH_ACCURACY, 1000).build()
-fusedLocationClient.requestLocationUpdates(locationRequest, locationCallback, Looper.getMainLooper())
-```
-
-**Lifecycle**:
-- `onViewCreated()` - Initialize sensor manager, sensors, GPS callback
-- `onResume()` - Register sensor listeners, start GPS updates
-- `onPause()` - Unregister listeners, stop GPS updates (battery saving)
-- `onDestroy()` - Cleanup resources
-
-#### PlaceholderFragments (Devices, Settings, About)
-Simple placeholder implementations for future enhancement:
-```kotlin
-class DevicesFragment : Fragment() {
-    override fun onCreateView(...): View = 
-        layoutInflater.inflate(R.layout.fragment_devices, container, false)
-}
-```
-
-#### activity_main.xml - Main Layout
 ```xml
-<LinearLayout android:orientation="vertical">
-    <FrameLayout 
-        android:id="@+id/fragment_container"
-        android:layout_weight="1"/>  <!-- Takes available space -->
-    <BottomNavigationView
-        android:id="@+id/bottom_navigation"
-        app:menu="@menu/bottom_menu"/>
-</LinearLayout>
-```
-
-#### fragment_dashboard.xml - Scrollable Sensor Display
-- **ScrollView**: Allows viewing all sensor data
-- **Four Sections**:
-  - Accelerometer (Green header, m/s²)
-  - Gyroscope (Blue header, rad/s)
-  - Magnetometer (Red header, μT)
-  - GPS Data (Blue status indicator)
-- **Real-time Updates**: Labels with current X, Y, Z values
-- **Responsive Layout**: Adapts to various screen sizes
-
-#### bottom_menu.xml - Navigation Menu
-```xml
-<menu>
-    <item android:id="@+id/nav_dashboard" 
-          android:icon="@android:drawable/ic_menu_compass"
-          android:title="@string/nav_dashboard"/>
-    <item android:id="@+id/nav_devices"
-          android:icon="@android:drawable/ic_menu_today"
-          android:title="@string/nav_devices"/>
-    <item android:id="@+id/nav_settings"
-          android:icon="@android:drawable/ic_menu_preferences"
-          android:title="@string/nav_settings"/>
-    <item android:id="@+id/nav_about"
-          android:icon="@android:drawable/ic_menu_info_details"
-          android:title="@string/nav_about"/>
-</menu>
-```
-
-#### Resource Files
-**strings.xml** - All UI strings for localization and formatting:
-- Navigation labels (Dashboard, Devices, Settings, About)
-- Sensor section titles and axis labels
-- GPS status messages (Initializing, Searching, Found, Permission Denied)
-- Format strings with `formatted="false"` for multi-parameter strings
-
-**colors.xml** - Color palette:
-- `status_green`: #FF4CAF50 (Accelerometer section)
-- `status_blue`: #FF2196F3 (Gyroscope & GPS)
-- `status_red`: #FFF44336 (Magnetometer section)
-- Material palette colors
-
-### 5. **Permissions**
-```xml
-<!-- AndroidManifest.xml -->
+<uses-permission android:name="android.permission.INTERNET" />
 <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 ```
-- Runtime permission requests on Android 6.0+ (API 23+)
-- User prompt when app first accesses GPS
-- DashboardFragment handles permission logic
 
----
+`INTERNET` is required for MQTT broker connectivity. `DashboardFragment` and `DevicesFragment` use location permissions for GPS.
 
-## Implementation Details
+Current caveat:
 
-### Sensor Data Display
-| Sensor | Type | Units | Axes | Update Rate |
-|--------|------|-------|------|------------|
-| Accelerometer | TYPE_ACCELEROMETER | m/s² | X, Y, Z | SENSOR_DELAY_UI |
-| Gyroscope | TYPE_GYROSCOPE | rad/s | X, Y, Z | SENSOR_DELAY_UI |
-| Magnetometer | TYPE_MAGNETIC_FIELD | μT | X, Y, Z | SENSOR_DELAY_UI |
-| GPS | LocationUpdates | Various | - | Every 1 second |
+- The code does not currently implement a permission result callback in `DashboardFragment`.
+- If the permission flow is improved, prefer AndroidX Activity Result APIs or a fragment-scoped permission callback.
 
-### GPS Tracking Features
-- **Continuous Updates**: Every 1 second
-- **High Accuracy Mode**: Uses GPS + WiFi + Cellular triangulation
-- **Data Provided**:
-  - Latitude (decimal degrees, 6 decimal precision)
-  - Longitude (decimal degrees, 6 decimal precision)
-  - Accuracy (uncertainty in meters, 1 decimal precision)
-  - Altitude (height above sea level in meters, 1 decimal precision)
+## Build Stack
 
-### Fragment Lifecycle Integration
-Each fragment properly manages its sensor/location listeners:
+| Component | Current Value |
+| --- | --- |
+| Kotlin | 1.9.0 |
+| Android Gradle Plugin | 8.1.0 |
+| compileSdk | 33 |
+| targetSdk | 33 |
+| minSdk | 26 |
+| Java compatibility | 17 |
+| Kotlin JVM target | 17 |
 
-```kotlin
-override fun onResume() {
-    super.onResume()
-    // Register all three sensors
-    accelerometerSensor?.let { sensorManager.registerListener(this, it, SENSOR_DELAY_UI) }
-    gyroscopeSensor?.let { sensorManager.registerListener(this, it, SENSOR_DELAY_UI) }
-    magnetometerSensor?.let { sensorManager.registerListener(this, it, SENSOR_DELAY_UI) }
-    
-    // Start GPS updates
-    if (hasLocationPermission()) {
-        startLocationUpdates()
-    }
-}
+## Dependencies
 
-override fun onPause() {
-    super.onPause()
-    // Unregister sensors to save battery
-    sensorManager.unregisterListener(this)
-    
-    // Stop GPS updates
-    stopLocationUpdates()
-}
-```
-
-### Permission Handling
-DashboardFragment checks and requests location permission:
-```kotlin
-if (ContextCompat.checkSelfPermission(context, ACCESS_FINE_LOCATION) != PERMISSION_GRANTED) {
-    requestPermissions(arrayOf(ACCESS_FINE_LOCATION, ACCESS_COARSE_LOCATION), CODE)
-} else {
-    startLocationUpdates()
-}
-
-override fun onRequestPermissionsResult(requestCode: Int, permissions: Array<String>, grantResults: IntArray) {
-    if (requestCode == CODE && grantResults.isNotEmpty() && grantResults[0] == PERMISSION_GRANTED) {
-        startLocationUpdates()
-    }
-}
-```
-
----
-
-## What Was Implemented
-
-### Phase 1: Basic Sensor Support
-- Added Accelerometer, Gyroscope, Magnetometer listeners
-- Real-time sensor value display with 3 decimal precision
-- Sensor lifecycle management in MainActivity
-
-### Phase 2: GPS Tracking
-- Added LocationCallback for continuous GPS updates
-- Implemented 1-second update interval using LocationRequest
-- Display Latitude, Longitude, Accuracy, Altitude
-- Runtime permission handling for location access
-
-### Phase 3: Fragment-Based Navigation (Current)
-- Refactored single-activity architecture to multi-fragment design
-- Moved all sensor/GPS logic to DashboardFragment
-- Created BottomNavigationView with 4 tabs
-- Implemented MainActivity as navigation orchestrator
-- Added placeholder fragments for Devices, Settings, About
-- Updated build dependencies (Material Design, Fragment support)
-- Fixed XML layout attribute (`labelVisibilityMode="auto"`)
-
----
-
-## Build & Deployment
-
-### Build Command
-```bash
-cd d:\code\andriod_tool\SimpleButtonApp
-gradle clean assembleDebug
-```
-
-### Install on Device
-```bash
-adb install -r app\build\outputs\apk\debug\app-debug.apk
-```
-
-### Launch App
-```bash
-adb shell am start -n com.example.simplebuttonapp/.MainActivity
-```
-
-### Screenshot Verification
-```bash
-adb shell screencap -p /sdcard/screenshot.png
-adb pull /sdcard/screenshot.png
-```
-
----
-
-## Testing Checklist
-
-✅ **Navigation**
-- [x] App launches with Dashboard tab visible
-- [x] Bottom navigation shows 4 icons
-- [x] Tapping tabs switches fragments
-- [x] Dashboard tab shows sensor data
-
-✅ **Sensor Data**
-- [x] Accelerometer values display and update (m/s²)
-- [x] Gyroscope values display and update (rad/s)
-- [x] Magnetometer values display and update (μT)
-- [x] All X, Y, Z axes populated
-
-✅ **GPS Data**
-- [x] GPS status shows "Searching..." initially
-- [x] GPS status changes to "Found ✓" when location acquired
-- [x] Latitude displays with 6 decimal precision
-- [x] Longitude displays with 6 decimal precision
-- [x] Accuracy shows with ± format (meters)
-- [x] Altitude displays with elevation (meters)
-- [x] GPS updates every ~1 second
-
-✅ **Lifecycle**
-- [x] Sensors start on app launch
-- [x] Sensors stop when app paused (battery optimization)
-- [x] GPS starts on app launch (with permission)
-- [x] GPS stops when app paused
-
----
-
-## Future Enhancements
-
-### DevicesFragment
-- Display list of connected Bluetooth/USB devices
-- Device connection management UI
-- Signal strength indicators
-
-### SettingsFragment
-- Sensor update rate configuration (SENSOR_DELAY_UI, FASTEST, etc.)
-- GPS accuracy mode selection (HIGH_ACCURACY, BALANCED, LOW_POWER)
-- Data logging enable/disable toggle
-- File export options
-
-### AboutFragment
-- App version and build info
-- Build timestamp
-- Developer credits
-- Open source license information
-- Links to documentation/repository
-
-### Dashboard Enhancements
-- Graph visualization for sensor data over time
-- Live compass using magnetometer
-- Elevation change chart using GPS altitude
-- Data statistics (min/max/average values)
-- Real-time motion detection indicators
-
----
-
-## ProGuard Rules
-The app includes ProGuard rules for code obfuscation in release builds:
-```
--keep class android.**, androidx.**, com.google.android.gms.**, com.example.simplebuttonapp.**
--keep class * implements java.io.Serializable
--keepclassmembers class * implements java.io.Serializable { static final long serialVersionUID; private static final java.io.ObjectStreamField[] serialPersistentFields; private void writeObject(...); private void readObject(...); java.lang.Object writeReplace(); java.lang.Object readResolve(); }
--keepattributes Exceptions, InnerClasses, Signature, *Annotation*
-```
-
----
-
-## Debugging Tips
-
-### Enable Debug Logging
-Check Logcat for app logs:
-```bash
-adb logcat | grep simplebuttonapp
-```
-
-### Common Issues & Solutions
-
-**GPS Location Not Updating**
-- Check: Is permission granted in device settings?
-- Check: Is device outdoors or in good GPS coverage?
-- Check: Is Location Services enabled on device?
-
-**Sensors Showing No Data**
-- Check: Does device have required sensors?
-- Check: Is app in foreground (sensors disabled when app paused)?
-
-**Build Failures**
-- Run: `gradle clean` to remove cached build artifacts
-- Check: SDK installation in Android Studio
-- Verify: Gradle daemon not stuck (`gradle --stop`)
-
----
-
-### Update #2: GPS Continuous Tracking
-**Changed From**: One-time GPS retrieval (`getCurrentLocation()`)
-**Changed To**: Continuous GPS updates (`requestLocationUpdates()`)
-**Interval**: 1 second for real-time tracking
-**Callback**: `LocationCallback` receives location updates automatically
-
-### Update #3: Removed Button Counter
-**Removed**: Button click counter UI and logic
-**Reason**: App now focuses on sensor and GPS data collection
-**Impact**: Simplified UI, more screen space for sensor data
-
-### Update #4: Permission Management
-**Added**: Runtime permission requests for location access
-**Handler**: `onRequestPermissionsResult()` starts GPS when approved
-**Fallback**: Displays "Permission denied" message if rejected
-
----
-
-## Build Instructions
-
-### Prerequisites
-- JDK 17+ installed
-- Android SDK (API 33 minimum)
-- Gradle 8.5+
-- USB-connected Android device with USB Debug enabled
-
-### Compile
-```bash
-cd d:\code\andriod_tool\SimpleButtonApp
-gradle clean assembleDebug
-```
-
-**Output**: `app/build/outputs/apk/debug/app-debug.apk`
-
-### Install on Device
-```bash
-adb install -r app/build/outputs/apk/debug/app-debug.apk
-adb shell am start -n com.example.simplebuttonapp/.MainActivity
-```
-
-### Run Tests
-```bash
-gradle test                 # Unit tests
-gradle connectedAndroidTest # Instrumented tests
-```
-
----
-
-## Screen Layout
-
-### Display Order (Top to Bottom)
-
-**Accelerometer Section** (Green Header)
-- X: [value] m/s²
-- Y: [value] m/s²
-- Z: [value] m/s²
-
-**Gyroscope Section** (Blue Header)
-- X: [value] rad/s
-- Y: [value] rad/s
-- Z: [value] rad/s
-
-**Magnetometer Section** (Red Header)
-- X: [value] μT
-- Y: [value] μT
-- Z: [value] μT
-
-**GPS Data Section**
-- Status: Initializing... → Searching... → Found ✓
-- Latitude: [degrees]°
-- Longitude: [degrees]°
-- Accuracy: ±[meters] m
-- Altitude: [meters] m
-
----
-
-## Version Reference
-
-### Gradle Plugin → Android SDK Support
-
-| Gradle Plugin | Max Tested SDK | Java Support |
-|---------------|----------------|--------------|
-| 8.0.x | 32 | 11-17 |
-| 8.1.x | 33 | 11-17 |
-| 8.2.x | 34 | 11-17+ |
-
-### Android SDK → Minimum Java Version
-
-| API Level | Min Java | Project Status |
-|-----------|----------|----------------|
-| 26-28 | Java 8 | Supported |
-| 29-30 | Java 9 | Supported |
-| 31-33 | Java 11+ | **Project (SDK 33, Java 17)** ✓ |
-| 34+ | Java 17+ | Future |
-
----
-
-## Configuration Checklist
-
-### ✅ Current Configuration Status
-
-- [x] Java 17 compatible (no deprecated JVM args)
-- [x] Gradle plugin matches SDK level (8.1.0 for SDK 33)
-- [x] AndroidX libraries used (not Support Library)
-- [x] Sensor listeners implemented (Accelerometer, Gyroscope, Magnetometer)
-- [x] GPS continuous updates (1 second interval)
-- [x] Runtime permissions (Location)
-- [x] ProGuard configured (release builds)
-- [x] Lint enabled with warnings-as-errors
-- [x] Testing dependencies included
-- [x] Project production-ready
-
----
-
-## Summary
-
-**SimpleButtonApp** is now a fully-functional Android sensor and GPS tracking application featuring:
-
-1. ✅ **Real-time Sensor Monitoring**: Accelerometer, Gyroscope, Magnetometer
-2. ✅ **Continuous GPS Tracking**: Location updates every 1 second
-3. ✅ **Modern Android Stack**: Kotlin, Java 17, AndroidX, Google Play Services
-4. ✅ **Battery Optimized**: Sensor/GPS lifecycle tied to app visibility
-5. ✅ **Permission Handling**: Runtime location permissions with fallback
-6. ✅ **Production Quality**: ProGuard, lint, testing infrastructure
-7. ✅ **Responsive UI**: ScrollView with color-coded sections
-
-The application successfully demonstrates professional Android development practices for sensor integration and real-time location tracking.
-
-// ✅ CORRECT
-classpath "com.android.tools.build:gradle:8.1.0"
-compileSdk 33
-```
-
-### Issue #3: Android SDK Version Requirement
-**Problem**: Java 17 target requires compileSdk 30+, attempted to use SDK 29  
-**Impact**: Compilation error - "In order to compile Java 9+ source, please set compileSdkVersion to 30 or above"  
-**Fix**: Used available SDK 33
-
-**Reference**:
 ```gradle
-// ❌ WRONG (Java 17 needs SDK 30+)
-compileOptions {
-    sourceCompatibility JavaVersion.VERSION_17
-}
-compileSdk 29
-
-// ✅ CORRECT
-compileOptions {
-    sourceCompatibility JavaVersion.VERSION_17
-}
-compileSdk 33
-```
-
-### Issue #4: AndroidX Library Version Conflicts
-**Problem**: androidx.core:core-ktx:1.12.0 requires SDK 34  
-**Impact**: Build failure due to minimum SDK requirements  
-**Fix**: Downgraded to compatible versions (core-ktx:1.10.1, appcompat:1.6.0)
-
-**Reference**:
-```gradle
-// ❌ WRONG (requires SDK 34)
-implementation "androidx.core:core-ktx:1.12.0"
-implementation "androidx.appcompat:appcompat:1.6.1"
-
-// ✅ CORRECT (compatible with SDK 33)
-implementation "androidx.core:core-ktx:1.10.1"
+implementation "org.jetbrains.kotlin:kotlin-stdlib:1.9.0"
 implementation "androidx.appcompat:appcompat:1.6.0"
+implementation "androidx.core:core-ktx:1.10.1"
+implementation "com.google.android.gms:play-services-location:21.0.1"
+implementation "com.google.android.material:material:1.9.0"
+implementation "androidx.fragment:fragment-ktx:1.6.1"
+implementation "org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.5"
+
+testImplementation "junit:junit:4.13.2"
+androidTestImplementation "androidx.test.ext:junit:1.1.5"
+androidTestImplementation "androidx.test.espresso:espresso-core:3.5.1"
 ```
 
-### Issue #5: Hard-Coded Strings
-**Problem**: Text strings embedded in code and layout XML  
-**Impact**: Poor localization support and maintainability  
-**Fix**: Moved all strings to strings.xml, updated code to use getString()
+## Resource Notes
 
-**Reference**:
+`fragment_dashboard.xml` uses a `ScrollView` with vertical sections for each sensor group and GPS.
+
+`strings.xml` contains labels and format strings for Dashboard and navigation text. Some current string values contain encoding artifacts such as `m/sÂ²`, `Î¼T`, `Â°`, `Â±`, and `âœ“`. These appear to be mojibake versions of `m/s²`, `µT`, `°`, `±`, and a check mark. Fixing those is a source/resource cleanup task, not a documentation task.
+
+`AboutFragment` currently hard-codes placeholder text in Kotlin instead of using string resources.
+
+## Settings WebView
+
+`SettingsFragment` loads:
+
+```text
+http://10.3.3.31:5000
+```
+
+It uses a full-screen `WebView` with JavaScript and DOM storage enabled so the page is interactive. The app includes `network_security_config.xml` to allow cleartext HTTP traffic to `10.3.3.31`.
+
+## Devices MQTT Publishing
+
+`DevicesFragment` lets the user enter:
+
+- Broker IP or link
+- MQTT port
+- Device name
+
+The topic is generated as:
+
+```text
+devices/<device-name>/gps
+```
+
+For example, device name `xyz` becomes:
+
+```text
+devices/xyz/gps
+```
+
+The Start Publish GPS button begins continuous publishing. While active, every GPS update is sent as JSON until Stop Publish is tapped. This process is held by `MqttGpsPublisherManager`, so it keeps running if the user switches to Dashboard, Settings, or About:
+
+```json
+{"lat":19.076,"lng":72.8777,"speed":45,"accuracy":8,"heading":120,"altitude":14}
+```
+
+The app maps Android `Location.bearing` to `heading`.
+
+## Common Changes
+
+### Add a New Sensor
+
+1. Add a sensor property to `DashboardFragment`.
+2. Initialize it from `sensorManager.getDefaultSensor(...)`.
+3. Register it in `onResume()`.
+4. Handle it in `onSensorChanged(...)`.
+5. Add TextViews to `fragment_dashboard.xml`.
+6. Add labels and format strings to `strings.xml`.
+
+### Change GPS Interval
+
+Edit `DashboardFragment.startLocationUpdates()`:
+
 ```kotlin
-// ❌ WRONG (hard-coded)
-statusText.text = "Button pressed $clickCount time(s)!"
-
-// ✅ CORRECT (localized)
-statusText.text = getString(R.string.click_message, clickCount)
+LocationRequest.Builder(Priority.PRIORITY_HIGH_ACCURACY, 1000)
 ```
 
----
+Change `1000` to the desired interval in milliseconds.
 
-## Build Instructions
+### Add Real Content to a Placeholder Tab
 
-### Prerequisites
-- JDK 17+ installed
-- Android SDK (API 33 minimum)
-- Gradle 8.5+
+1. Create a layout XML file under `app/src/main/res/layout/`.
+2. Move visible strings into `strings.xml`.
+3. Inflate the layout from the fragment.
+4. Keep fragment-specific behavior inside the fragment.
 
-### Build Debug APK
+### Add a New Navigation Tab
+
+1. Create a new fragment class.
+2. Add a menu item to `bottom_menu.xml`.
+3. Add a string resource for the tab title.
+4. Add a branch in `MainActivity.setOnItemSelectedListener`.
+
+## Commands
+
 ```bash
-cd d:\code\andriod_tool\SimpleButtonApp
 gradle assembleDebug
-```
-
-**Output**: `app/build/outputs/apk/debug/app-debug.apk`
-
-### Build Release APK
-```bash
-gradle assembleRelease
-```
-
-**Output**: `app/build/outputs/apk/release/app-release.apk`
-
-### Run Tests
-```bash
-# Unit tests
-gradle test
-
-# Instrumented tests
-gradle connectedAndroidTest
-```
-
-### Clean Build
-```bash
 gradle clean assembleDebug
-```
-
----
-
-## Deployment
-
-### Install on Device/Emulator
-```bash
-# Requires Android device or emulator connected
+gradle test
+gradle connectedAndroidTest
 adb install -r app/build/outputs/apk/debug/app-debug.apk
-```
-
-### Verify Installation
-```bash
-adb shell pm list packages | grep simplebuttonapp
 adb shell am start -n com.example.simplebuttonapp/.MainActivity
 ```
-
----
-
-## Code Walkthrough
-
-### MainActivity.kt
-```kotlin
-package com.example.simplebuttonapp
-
-import android.os.Bundle
-import android.widget.Button
-import android.widget.TextView
-import androidx.appcompat.app.AppCompatActivity
-
-class MainActivity : AppCompatActivity() {
-
-    private var clickCount = 0  // State tracking
-
-    override fun onCreate(savedInstanceState: Bundle?) {
-        super.onCreate(savedInstanceState)
-        setContentView(R.layout.activity_main)
-
-        // Find UI elements
-        val button = findViewById<Button>(R.id.myButton)
-        val statusText = findViewById<TextView>(R.id.statusText)
-
-        // Handle button clicks
-        button.setOnClickListener {
-            clickCount++
-            statusText.text = getString(R.string.click_message, clickCount)
-        }
-    }
-}
-```
-
-**Key Points**:
-- Extends `AppCompatActivity` for backward compatibility
-- Uses `findViewById` for view reference (modern: use ViewBinding)
-- Implements click listener as lambda
-- Uses `getString()` for localized strings with formatted arguments
-
-### activity_main.xml
-```xml
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center"
-    android:padding="32dp">
-
-    <TextView
-        android:id="@+id/statusText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/initial_status"
-        android:textSize="22sp"
-        android:layout_marginBottom="32dp"/>
-
-    <Button
-        android:id="@+id/myButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/button_label"
-        android:textSize="18sp"/>
-</LinearLayout>
-```
-
-**Key Points**:
-- Centered layout with padding
-- All strings reference `@string/` resources
-- Proper sizing and spacing
-
-### strings.xml
-```xml
-<resources>
-    <string name="app_name">SimpleButtonApp</string>
-    <string name="initial_status">Press the button</string>
-    <string name="button_label">Tap Me</string>
-    <string name="click_message">Button pressed %1$d time(s)!</string>
-</resources>
-```
-
-**Key Points**:
-- Centralized string management
-- Support for string formatting (%1$d)
-- Easy for localization (add string-es.xml, string-fr.xml, etc.)
-
----
-
-## Build Configuration Best Practices
-
-### gradle.properties
-```gradle
-# JVM Memory (optimized for Java 17)
-org.gradle.jvmargs=-Xmx2048m
-org.gradle.parallel=true
-org.gradle.caching=true
-
-# AndroidX Configuration
-android.useAndroidX=true
-android.enableJetifier=true
-android.suppressUnsupportedCompileSdk=34
-```
-
-### app/build.gradle
-```gradle
-// Enable ProGuard for release builds
-buildTypes {
-    release {
-        minifyEnabled true
-        proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-    }
-}
-
-// Enable lint checks
-lint {
-    checkReleaseBuilds true
-    warningsAsErrors true
-}
-
-// Kotlin options
-kotlinOptions {
-    jvmTarget = "17"
-}
-```
-
----
-
-## ProGuard Configuration (proguard-rules.pro)
-
-**Purpose**: Obfuscate and optimize code for release builds
-
-```gradle
-# Keep Android framework
--keep class android.** { *; }
--keep interface android.** { *; }
-
-# Keep AndroidX
--keep class androidx.** { *; }
--keep interface androidx.** { *; }
-
-# Keep app classes
--keep class com.example.simplebuttonapp.** { *; }
-
-# Remove debug logging
--assumenosideeffects class android.util.Log {
-    public static *** d(...);
-    public static *** v(...);
-    public static *** i(...);
-}
-
-# Keep enums
--keepclassmembers enum * {
-    public static **[] values();
-    public static ** valueOf(java.lang.String);
-}
-```
-
----
-
-## Testing
-
-### Unit Test Example
-```kotlin
-import org.junit.Test
-import org.junit.Assert.*
-
-class MainActivityTest {
-    @Test
-    fun clickCounterIncrementsCorrectly() {
-        // Test logic here
-        assertEquals(1, 1)
-    }
-}
-```
-
-**Location**: `src/test/java/com/example/simplebuttonapp/`
-
-### Instrumented Test Example
-```kotlin
-import androidx.test.ext.junit.runners.AndroidJUnit4
-import androidx.test.rule.ActivityTestRule
-import androidx.test.espresso.Espresso.onView
-import androidx.test.espresso.matcher.ViewMatchers.withId
-import androidx.test.espresso.action.ViewActions.click
-
-@RunWith(AndroidJUnit4::class)
-class MainActivityInstrumentedTest {
-    @get:Rule
-    val activityRule = ActivityTestRule(MainActivity::class.java)
-
-    @Test
-    fun buttonClicksWork() {
-        onView(withId(R.id.myButton)).perform(click())
-    }
-}
-```
-
-**Location**: `src/androidTest/java/com/example/simplebuttonapp/`
-
----
-
-## Troubleshooting
-
-### Build Error: "Unrecognized VM option"
-**Cause**: Java version incompatibility with gradle.properties  
-**Solution**: Remove `-XX:MaxPermSize`, use `-Xmx2048m` only
-
-### Build Error: "Could not compile Java 9+ source"
-**Cause**: compileSdk too low for Java 17  
-**Solution**: Set `compileSdk 30` or higher
-
-### Build Error: "Preparing Android SDK Platform"
-**Cause**: Missing SDK version  
-**Solution**: Use available SDK or let system download (patient wait required)
-
-### APK Won't Install
-**Cause**: Version conflicts or device incompatibility  
-**Solution**: 
-```bash
-adb uninstall com.example.simplebuttonapp
-adb install -r app/build/outputs/apk/debug/app-debug.apk
-```
-
----
-
-## Key Learning Points
-
-1. **Version Alignment**: Always ensure Gradle plugin, SDK, and Java versions are compatible
-2. **Resource Management**: Centralize strings, colors, and assets for maintainability
-3. **ProGuard**: Use for release builds to reduce APK size and protect code
-4. **Testing**: Include unit and instrumented tests from the start
-5. **Lint Checks**: Enable warnings-as-errors to catch issues early
-6. **AndroidX**: Modern replacement for deprecated Android Support Library
-
----
-
-## Next Steps for Improvement
-
-### 1. Add ViewModel (Architecture)
-```kotlin
-class MainViewModel : ViewModel() {
-    private val _clickCount = MutableLiveData(0)
-    val clickCount: LiveData<Int> = _clickCount
-    
-    fun incrementClickCount() {
-        _clickCount.value = (_clickCount.value ?: 0) + 1
-    }
-}
-```
-
-### 2. Use ViewBinding (instead of findViewById)
-```kotlin
-private lateinit var binding: ActivityMainBinding
-
-override fun onCreate(savedInstanceState: Bundle?) {
-    super.onCreate(savedInstanceState)
-    binding = ActivityMainBinding.inflate(layoutInflater)
-    setContentView(binding.root)
-    
-    binding.myButton.setOnClickListener { /* ... */ }
-}
-```
-
-### 3. Add Dependency Injection (Hilt)
-```gradle
-dependencies {
-    implementation "com.google.dagger:hilt-android:2.44"
-}
-```
-
-### 4. Add Navigation Component
-```gradle
-dependencies {
-    implementation "androidx.navigation:navigation-fragment-ktx:2.5.3"
-}
-```
-
-### 5. Implement Data Persistence
-```kotlin
-// Room Database for local storage
-implementation "androidx.room:room-runtime:2.5.2"
-```
-
----
-
-## Files Modified/Created
-
-| File | Status | Changes |
-|------|--------|---------|
-| build.gradle | Modified | Updated Gradle plugin version |
-| gradle.properties | Created | Added JVM and Android settings |
-| app/build.gradle | Modified | Added dependencies, lint, ProGuard config |
-| app/proguard-rules.pro | Created | Code obfuscation rules |
-| app/src/main/res/values/colors.xml | Created | Material Design color palette |
-| app/src/main/res/values/strings.xml | Modified | Added localization strings |
-| app/src/main/res/layout/activity_main.xml | Modified | Updated to use string resources |
-| app/src/main/kotlin/.../MainActivity.kt | Modified | Updated to use getString() |
-| AndroidManifest.xml | Unchanged | Already properly configured |
-
----
-
-## Build Summary
-
-**Final Build Output**:
-- ✅ APK Built Successfully
-- 📦 Size: 3.09 MB (debug)
-- ⏱️ Build Time: ~1 minute 12 seconds
-- 📁 Location: `app/build/outputs/apk/debug/app-debug.apk`
-
----
-
-## Reference Documentation
-
-- [Android Developer Guide](https://developer.android.com/guide)
-- [Kotlin Android Documentation](https://developer.android.com/kotlin)
-- [AndroidX Libraries](https://developer.android.com/jetpack)
-- [Gradle Build System](https://developer.android.com/studio/build)
-- [ProGuard Manual](https://www.guardsquare.com/proguard/manual)
-
----
-
-**Last Updated**: May 11, 2026  
-**Status**: ✅ Production Ready
